--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.practica3grupo3</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Practica3Grupo3</name>
-	<description>Demo project for Spring Boot</description>
+	<name>practica01</name>
+	<description>Practica Grupo3</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
